Some courses added.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
                                             <p>Avançado</p>
                                         </div>
                                     </div>
+                                    <div class="col-6 margin-bottom50">
+                                        <div class="col-6"><span class="chart" data-percent="70"><span class="percent"></span> </span>
+                                        </div>
+                                        <div class="col-6 chart-text">
+                                            <h4>Java</h4>
+                                            <p>Médio</p>
+                                        </div>
+                                    </div>
                                     <div class="col-6">
                                         <div class="col-6"><span class="chart" data-percent="70"><span class="percent"></span> </span>
                                         </div>
@@ -165,7 +173,6 @@
                                             <li>Bootstrap</li>
                                             <li>Foundation</li>
                                             <li>HTML</li>
-                                            
                                             <!-- <li>Photoshop / Corel Draw</li> -->
                                         </ul>
                                     </div>
@@ -358,6 +365,50 @@
                                         <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
                                             <!-- Groundbreaking work in a wide range of areas including provably secure cryptography, artificial intelligence, the implementation of sensor nets, developments at the interface of economics and computer science. My studies included strong use of math and arithmetic to develop and improve programing skills. -->
                                             Um trabalho único em uma ampla gama de áreas. Meus estudos incluíram forte uso de matemática e aritmética para desenvolver e melhorar as habilidades de programação.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="education-con">
+                            <div class="container-sub">
+                                <div class="full-divider"></div>
+                                <div class="row">
+                                    <div class="education-details">
+                                        <div class="col-6 margin-bottom50 margin-top50">
+                                            <div class="col-3 icon-block"><i class="fa fa-laptop"></i></div>
+                                            <div class="flot-left">
+                                                <h5>Udemy</h5>
+                                                <h4>
+                                                    TypeScript<br/>El lenguaje<br/>utilizado por<br/>Angular 2
+                                                </h4>
+                                                <span>2016</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
+                                            Foco no Javascript Orientado a Objetos utilizando a linguagem Typescript.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="education-con">
+                            <div class="container-sub">
+                                <div class="full-divider"></div>
+                                <div class="row">
+                                    <div class="education-details">
+                                        <div class="col-6 margin-bottom50 margin-top50">
+                                            <div class="col-3 icon-block"><i class="fa fa-laptop"></i></div>
+                                            <div class="flot-left">
+                                                <h5>Udemy</h5>
+                                                <h4>
+                                                    Introduction to<br />TypeScript
+                                                </h4>
+                                                <span>2016</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
+                                            Foco na instroduçào e conceitos gerais da linguagem Typescript.
                                         </div>
                                     </div>
                                 </div>
@@ -647,7 +698,7 @@
                         <h2>Projetos</h2>
                         <div class="title-divider"></div>
                         <p>
-                            Tenho experiência em desenvolver aplicações em tempo real e multiplaforma, que podem requerer muitos acessos simultâneos.
+                            Possuo experiência em desenvolver aplicações em tempo real e multiplaforma, que podem requerer muitos acessos simultâneos.
                         </p>
                         <div class="portfolio-con">
                             <div class="container-sub margin-top50">
@@ -793,7 +844,6 @@
                                                 <!-- <a href="http://stackoverflow.com/users/840524/nanndoj" target="_blank">
                                                     <i class="fa fa-stack-overflow"></i>
                                                 </a> -->
-                                                
                                                 <a href="" target="_blank">
                                                     <i class="fa fa-linkedin"></i>
                                                 </a>
