--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -448,6 +448,30 @@
                                             <div class="col-3 icon-block"><i class="fa fa-laptop"></i></div>
                                             <div class="flot-left">
                                                 <h5>Udemy</h5>
+                                                <h4>
+                                                    How to Create<br />
+                                                    a Website<br />
+                                                    Using WordPress
+                                                </h4>
+                                                <span>2016</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
+                                            Foco na configuracação e criação de um site completo, surpreendente e com aparência profissional usando o WordPress.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="education-con">
+                            <div class="container-sub">
+                                <div class="full-divider"></div>
+                                <div class="row">
+                                    <div class="education-details">
+                                        <div class="col-6 margin-bottom50 margin-top50">
+                                            <div class="col-3 icon-block"><i class="fa fa-laptop"></i></div>
+                                            <div class="flot-left">
+                                                <h5>Udemy</h5>
                                                 <h4>Learn and<br/>Understand NodeJS</h4>
                                                 <span>2016</span>
                                             </div>
@@ -469,15 +493,14 @@
                                             <div class="flot-left">
                                                 <h5>Udemy</h5>
                                                 <h4>
-                                                Learn MeteorJS<br/>
-                                                Building 10 Real<br/>
-                                                World Projects
+                                                Learn AngularJS<br />
+                                                Step by Step
                                                 </h4>
                                                 <span>2016</span>
                                             </div>
                                         </div>
                                         <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
-                                            Curso com foco na contrução de applicações em tempo real, utilizando a tecnologia MeteorJS.
+                                            Angular JS é focado na criação de sistemas para web, aprendendendo todos os comandos desse poderoso framework.
                                         </div>
                                     </div>
                                 </div>
@@ -493,14 +516,86 @@
                                             <div class="flot-left">
                                                 <h5>Udemy</h5>
                                                 <h4>
+                                                Learn Object<br />
+                                                Oriented PHP<br />
+                                                By Building a<br />
+                                                Complete Website 
+                                                </h4>
+                                                <span>2016</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
+                                            Curso com foco na contrução de applicações Web, utilizando a tecnologia PHP.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="education-con">
+                            <div class="container-sub">
+                                <div class="full-divider"></div>
+                                <div class="row">
+                                    <div class="education-details">
+                                        <div class="col-6 margin-bottom50 margin-top50">
+                                            <div class="col-3 icon-block"><i class="fa fa-laptop"></i></div>
+                                            <div class="flot-left">
+                                                <h5>Udemy</h5>
+                                                <h4>
+                                                Learn MeteorJS<br />
+                                                Building 10 Real<br />
+                                                World Projects
+                                                </h4>
+                                                <span>2016</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
+                                            Curso com foco na contrução de applicações em tempo real, utilizando a tecnologia MeteorJS.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="education-con">
+                            <div class="container-sub">
+                                <div class="full-divider"></div>
+                                <div class="row">
+                                    <div class="education-details">
+                                        <div class="col-6 margin-bottom50 margin-top50">
+                                            <div class="col-3 icon-block"><i class="fa fa-laptop"></i></div>
+                                            <div class="flot-left">
+                                                <h5>Udemy</h5>
+                                                <h4>
                                                 Curso de<br />
                                                 Angular JS
                                                 </h4>
-                                                <span>2015</span>
+                                                <span>2016</span>
                                             </div>
                                         </div>
                                         <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
                                             Angular JS é focado na criação de sistemas para web, aprendendendo todos os comandos desse poderoso framework.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="education-con">
+                            <div class="container-sub">
+                                <div class="full-divider"></div>
+                                <div class="row">
+                                    <div class="education-details">
+                                        <div class="col-6 margin-bottom50 margin-top50">
+                                            <div class="col-3 icon-block"><i class="fa fa-laptop"></i></div>
+                                            <div class="flot-left">
+                                                <h5>Udemy</h5>
+                                                <h4>
+                                                Html5 and CSS3
+                                                </h4>
+                                                <span>2016</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
+                                            Curso para desenvolvedores Web que proporciona em um só lugar tudo o que é preciso saber para criar seu próprio website utilizando as tecnologias HTML5 e CSS3.
                                         </div>
                                     </div>
                                 </div>
