Fixing some links.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -858,8 +858,10 @@
                                                         <figcaption>
                                                             <h3>GuaruBus</h3>
                                                             <span>
-                                                                <a href="https://play.google.com/store/apps/details?id=br.praianos" target="_blank">GuaruBus Android</a>/
-                                                                <a href="https://itunes.apple.com/nl/app/praianos/id1119038287?l=en&mt=8" target="_blank">GuaruBus iOS</a>
+                                                                <a href="https://play.google.com/store/apps/details?id=br.polygon4games.guarubus.free" target="_blank">GuaruBus Android</a>
+                                                                /
+                                                                <a href="https://itunes.apple.com/br/app/guarubusfree/id1137824587?mt=8" target="_blank">GuaruBus iOS</a>
+                                                                /
                                                                 <a href="https://www.microsoft.com/pt-br/store/p/guarubusfree/9nblggh4v083" target="_blank">GuaruBus Windows Phone</a>
 
                                                             </span>
