--- a/index.html
+++ b/index.html
@@ -985,23 +985,23 @@
                                 <h3>Envie uma mensagem</h3>
                             </div>
                             <div class="row">
-                                <form action="contact_process.php" method="post" id="contactForm">
+                                <form action="php/sendmail.php" method="post" id="contactForm">
                                     <div class="form-group col-md-12">
                                         <input type="text" class="form-control" name="name" id="name"
                                             placeholder="Nome*">
                                     </div>
-                                    <div class="form-group col-md-12">
+                                    <!-- <div class="form-group col-md-12">
                                         <input type="text" class="form-control" name="last" id="last"
                                             placeholder="Sobrenome*">
-                                    </div>
+                                    </div> -->
                                     <div class="form-group col-md-12">
                                         <input type="email" class="form-control" name="email" id="email"
                                             placeholder="Seu Email*">
                                     </div>
-                                    <div class="form-group col-md-12">
+                                    <!-- <div class="form-group col-md-12">
                                         <input type="text" class="form-control" name="subject" id="subject"
                                             placeholder="Assunto">
-                                    </div>
+                                    </div> -->
                                     <div class="form-group col-md-12">
                                         <textarea class="form-control" rows="1" id="message" name="message"
                                             placeholder="Mensagem"></textarea>
