--- a/index.html
+++ b/index.html
@@ -985,10 +985,10 @@
                                 <h3>Envie uma mensagem</h3>
                             </div>
                             <div class="row">
-                                <form action="php/sendmail.php" method="post" id="contactForm">
+                                <form action="https://diaslino-h.000webhostapp.com/sendmail.php" method="post" id="contactForm">
                                     <div class="form-group col-md-12">
                                         <input type="text" class="form-control" name="name" id="name"
-                                            placeholder="Nome*">
+                                            placeholder="Nome*" required>
                                     </div>
                                     <!-- <div class="form-group col-md-12">
                                         <input type="text" class="form-control" name="last" id="last"
@@ -996,7 +996,7 @@
                                     </div> -->
                                     <div class="form-group col-md-12">
                                         <input type="email" class="form-control" name="email" id="email"
-                                            placeholder="Seu Email*">
+                                            placeholder="Seu Email*"  required>
                                     </div>
                                     <!-- <div class="form-group col-md-12">
                                         <input type="text" class="form-control" name="subject" id="subject"
