--- a/index.html
+++ b/index.html
@@ -183,20 +183,29 @@
                                 </div>
                             </div>
                             <div class="single_skill">
-                                <h4>Html & Css</h4>
+                                <h4>PHP</h4>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100">
-                                        <div class="progress_parcent"><span class="counter">75</span>%</div>
+                                        <div class="progress_parcent"><span class="counter">70</span>%</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="single_skill">
                                 <h4>Desenvolvimento Back-End</h4>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100">
-                                        <div class="progress_parcent"><span class="counter">80</span>%</div>
+                                        <div class="progress_parcent"><span class="counter">70</span>%</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_skill">
+                                <h4>APIs</h4>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100">
+                                        <div class="progress_parcent"><span class="counter">70</span>%</div>
                                     </div>
                                 </div>
                             </div>
@@ -206,20 +215,29 @@
 
                         <div class="skill_item_inner">
                             <div class="single_skill">
+                                <h4>Linux</h4>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                        aria-valuemax="100">
+                                        <div class="progress_parcent"><span class="counter">80</span>%</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single_skill">
                                 <h4>Java</h4>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100">
-                                        <div class="progress_parcent"><span class="counter">70</span>%</div>
+                                        <div class="progress_parcent"><span class="counter">50</span>%</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="single_skill">
                                 <h4>Testes</h4>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100">
-                                        <div class="progress_parcent"><span class="counter">70</span>%</div>
+                                        <div class="progress_parcent"><span class="counter">50</span>%</div>
                                     </div>
                                 </div>
                             </div>
@@ -251,6 +269,24 @@
                     <h2>Experiências</h2>
                 </div>
                 <div class="education_inner_area">
+                    <div class="education_item wow fadeInUp animated" data-line="K">
+                        <h6>2018-2019</h6>
+                        <a href="#">
+                            <h4>
+                                Desenvolvedor Front-End
+                            </h4>
+                        </a>
+                        <h5>
+                            KInterativa
+                        </h5>
+                        <p>
+                        Desenvolvimento de aplicações web, com foco no framework AngularJS e Laravel;
+                        <br>
+                        Desenvolvimento de websites;
+                        <br>
+                        Desenvolviemento e manutenção de aplicações em AngularJs + Sqlserver.
+                        </p>
+                    </div>
                     <div class="education_item wow fadeInUp animated" data-line="V">
                         <h6>2014-2015</h6>
                         <a href="#">
