--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <br>
                         Desenvolvimento de websites;
                         <br>
-                        Desenvolviemento e manutenção de aplicações em AngularJs + Sqlserver.
+                        Desenvolvimento e manutenção de aplicações em AngularJs + Sqlserver.
                         </p>
                     </div>
                     <div class="education_item wow fadeInUp animated" data-line="V">
